# Team_Chale

./: .gitignore  License  README.md  README_1.md
src/chaleBOT_moveIt_config/: CMakeLists.txt  package.xml
src/chaleBOT_moveIt_config/config/: chaleBOT.ros2_control.xacro  chaleBOT.srdf  chaleBOT.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/chaleBOT_moveIt_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  (+5 more)
src/chale_bot/chaleBOT_description/: CMakeLists.txt  move_cycle.py  package.xml
src/chale_bot/chaleBOT_description/launch/: controller.yaml  controllers.launch.py  display.launch.py  gazebo.launch.py  urdf.rviz
src/chale_bot/chaleBOT_description/meshes/: arm_link_1_1.stl  arm_link_2_1.stl  arm_link_3_1.stl  arm_link_4_1.stl  arm_link_5_1.stl  base_link.stl  camera_1.stl  gripper_clamp_1.stl  gripper_stator_1.stl  leftAFT_wheel_1.stl  leftFWD_wheel_1.stl  pick_basket_1.stl  rightAFT_wheel_1.stl  rightFWD_wheel_1.stl
src/chale_bot/chaleBOT_description/parameters/: bridge_parameters.yaml  bridge_parameters.yaml.bak
src/chale_bot/chaleBOT_description/urdf/: chaleBOT.gazebo  chaleBOT.trans  chaleBOT.xacro  greenHouse.world.xacro  greenhouse.world  materials.xacro
src/chale_bot/chaleBOT_description/worlds/: greenhouse.world  greenhouse.world.xacro  your_world.world
src/chale_bot/chaleBOT_description/worlds/models/vegetable_crop/: model.config  model.sdf
src/chale_bot/chaleBOT_description/worlds/models/vegetable_crop/meshes/: vegetable_crop.stl
(+9 files in other folders)
